--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -26,6 +26,15 @@ header {
     background-color: #555;
 }
 
+.nav-link.active {
+  background-color: #0077b6;
+  color: #fff;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+}
+
+
 /* main h1 */
 
 main h1 {
