--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -3,6 +3,13 @@ header {
     padding: .5rem;
     color: white
 }
+header span {
+    display: flex;
+    margin: 0;
+    font-size: 1.5rem;
+    font-weight: bold;
+    justify-content: center;
+}
 
 .navigation {
     display: flex;
@@ -14,7 +21,9 @@ header {
 }
 
 .nav-button a {
-    display: block;
+    /* display: block; */
+    display: flex;
+    justify-content: flex-end;
     padding: 0.75rem 1rem;
     color: white;
     text-decoration: none;
