--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -14,9 +14,14 @@ header {
 header span {
     display: flex;
     margin: 0;
-    font-size: 1.5rem;
+    font-size: 2.5rem;
     font-weight: bold;
     justify-content: center;
+}
+.site-logo {
+    width: 120px;
+    height: auto;
+    margin-right: 1rem;
 }
 
 .navigation {
@@ -27,11 +32,14 @@ header span {
     padding: 0;
     margin: 0;
 }
+ul.navigation {
+  display: flex;
+  justify-content: flex-end;
+}
 
 .nav-button a {
     /* display: block; */
     display: flex;
-    justify-content: flex-end;
     padding: 0.75rem 1rem;
     color: white;
     text-decoration: none;
@@ -52,7 +60,59 @@ header span {
 }
 
 
-/* main h1 */
+/* main sections for home page */
+.banner-image {
+  max-width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  align-items: center;
+  position: relative;
+}
+
+.hero {
+  position: relative;
+  text-align: center;
+  color: white;
+  width: 100%;
+  height: 400px;
+  background: url('/images/hero-1-resized.webp') no-repeat center/cover;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.hero-content {
+  z-index: 2;
+}
+.hero h1 {
+  font-size: 2.5rem;
+  padding: 1rem 2rem;
+  color: white;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 10px;
+}
+.hero-button {
+  background-color: #0077b6;
+  color: white;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  border-radius: 5px;
+  font-size: 1.2rem;
+  cursor: pointer;
+  margin-top: 1rem;
+}
+
+.intro {
+  text-align: center;
+  margin: 1rem;
+}
+.intro-image {
+  width: 250px;
+  height: auto;
+  display: block;
+  margin: 1rem auto;
+}
 
 /* Typography & Layout */
 main h1 {
