--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -331,3 +331,15 @@ footer {
     align-items: flex-start;
   }
 }
+
+@media (min-width: 769px) {
+  #mobile-nav {
+    display: flex !important;
+    flex-direction: row;
+    justify-content: space-around;
+  }
+
+  #hamburger {
+    display: none !important;
+  }
+}
