--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -100,7 +100,7 @@ ul.navigation {
   color: white;
   width: 100%;
   height: 400px;
-  background: url('../images/hero-1-resized.webp') no-repeat center/cover;
+  background: url('/images/hero-1-resized.webp') no-repeat center/cover;
   display: flex;
   justify-content: center;
   align-items: center;
