discovery page, css, js.

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -466,3 +466,41 @@ footer {
   cursor: pointer;
   color: #333;
 }
+
+
+.cards {
+  display: grid;
+  gap: 1rem;
+}
+
+@media (max-width: 640px) {
+  .cards {
+    grid-template-areas:
+      "card1"
+      "card2"
+      "card3"
+      "card4"
+      "card5"
+      "card6"
+      "card7"
+      "card8";
+  }
+}
+
+@media (min-width: 641px) and (max-width: 1024px) {
+  .cards {
+    grid-template-areas:
+      "card1 card2"
+      "card3 card4"
+      "card5 card6"
+      "card7 card8";
+  }
+}
+
+@media (min-width: 1025px) {
+  .cards {
+    grid-template-areas:
+      "card1 card2 card3 card4"
+      "card5 card6 card7 card8";
+  }
+}
