--- a/final_project/styles/clean_sweep.css
+++ b/final_project/styles/clean_sweep.css
@@ -51,6 +51,14 @@ header {
     text-decoration: underline;
 }
 
+.active {
+  background-color: var(--accent-color2);
+  color: #fff;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 0.5rem 1rem;
+}
+
 
 /* main */
 
