--- a/final_project/styles/clean_sweep.css
+++ b/final_project/styles/clean_sweep.css
@@ -649,6 +649,20 @@ button:hover {
   outline: none;
 }
 
+.contact-banner {
+  background-color: var(--background-color);
+  color: var(--accent-color1)
+}
+.contact-banner h1 {
+  text-align: center;
+  color: var(--accent-color1)
+}
+.contact-banner p {
+  text-align: center;
+  color: var(--accent-color1);
+  font-size: 1.2rem;
+}
+
 /* Submit button */
 .join-form button {
   width: 100%;
